# rust_communication

./: .env  Cargo.toml
src/: config.rs  main.rs
