[package]
name = "memory_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
crypto = {version="0.4.0", features=["std","cipher","aead","universal-hash"]}
env-file-reader = "0.3.0"
interprocess = "1.2.1"
libc = "0.2.139"
rand = "0.8.5"
regex = "1.7.1"
signal-hook = "0.3.15"
